# facial-keypoints-detection

./: .gitignore  app.py  pyproject.toml  pytest.ini
.dvc/: config
.github/workflows/: codeql-analysis.yml
conf/data/: interim.yaml  raw.yaml
conf/models/: resnet.yaml
data/raw/test/: test.csv.dvc
data/raw/training/: training.csv.dvc
src/: data_loading.py  helpers.py  model.py  resnet_tools.py  visualization.py
src/facial_keypoints_detection/: __init__.py
src/facial_keypoints_detection/conf/data/: raw.yaml
src/facial_keypoints_detection/models/: resnet.py
src/facial_keypoints_detection/tools/: __init__.py  data.py  helpers.py
src/facial_keypoints_detection/training/: __init__.py  data_quality.py  dataprep.py  training.py
src/facial_keypoints_detection/types/: __init__.py  types.py
src/models/: resnet.py
src/tools/: data.py  data_loading.py  helpers.py  model.py  resnet_tools.py  visualization.py
src/types/: __init__.py  types.py
tests/: conftest.py  test_data_loading.py  test_helpers.py  test_model.py  test_resnet_tools.py  test_visualization.py
tests/models/: test_resnet.py
tests/test_models/: test_resnet.py
tests/test_tools/: test_data.py  test_data_loading.py  test_helpers.py  test_model.py  test_resnet_tools.py  test_visualization.py
tests/tools/: test_data.py  test_helpers.py  test_visualization.py
