[tool.poetry]
name = "facial-keypoints-detection"
version = "0.1.0"
description = "Kaggle knowledge competition for facial keypoints identification."
authors = ["Luis Gustavo Santos Barros"]
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
data = "src.facial_keypoints_detection.training.dataprep:cli"
quality = "src.facial_keypoints_detection.training.data_quality:cli"
model = "src.facial_keypoints_detection.training.training:cli"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
kaggle = "^1.5.12"
tensorflow = "^2.8.1"
opencv-python = "^4.5.5"
hydra-core = "^1.1.1"
streamlit = "^1.7.0"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
hypothesis = "^6.39.3"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
